mudando o head do site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="imgs/setaazul.jpg" id="irTopo" alt="seta p cima">
     </a>
     <header>
-        <h1>Projeto de Tênis de mesa</h1>
+        <h1>Projeto de Tênis de mesa - Usando Git </h1>
     </header>
     <hr>
     <div class="content">
